@@ -2,7 +2,7 @@
 /* define package */
 define('PKG_NAME','MinifyX');
 define('PKG_NAME_LOWER',strtolower(PKG_NAME));
-define('PKG_VERSION','1.3.1');
+define('PKG_VERSION','1.4.0');
 define('PKG_RELEASE','pl');
 define('PKG_AUTO_INSTALL', true);
 
